Fix follow button on mobile

--- a/ui/scss/component/_claim-preview.scss
+++ b/ui/scss/component/_claim-preview.scss
@@ -573,7 +573,7 @@
           width:100%;
         }
       }
-      button.button-following {
+      button.button-following:last-of-type {
         max-width:fit-content;
       }
 
